- fix layout issues in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,13 @@ html, body {
 	background-image: linear-gradient(top, #533F20, #39230E);
 	background-repeat: repeat-x;
 	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#533F20', endColorstr='#39230E', GradientType=0);
-	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+	/*-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-	font-family: 'Vollkorn', serif;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);*/
+	font-family: 'Ultra', serif;
 	font-size: 36px;
 	color: #FEF500;
-	text-shadow: 2px 1px -1px #E58620;
+	/*text-shadow: 2px 1px -1px #E58620;*/
 	padding-top: 15px;
 	position: absolute;
 	z-index: 999;
@@ -41,10 +41,11 @@ html, body {
 
 #title{
 	float: left;
-	margin-left: 75px;
-	font-weight: bold;
+	position: absolute;
+	margin-left: 80px;
+	font-weight: normal;
 	font-size: 30px;
-	margin-top: 2px;
+	top: 15px;
 }
 
 #likegroup {
@@ -56,7 +57,7 @@ html, body {
 
 #header #likegroup .fb-like {
 	float: left;
-	margin-top: -12px;
+	margin-top: -7px;
 	margin-right: 18px;
 }
 
@@ -76,7 +77,7 @@ html, body {
 
 #listlist{
 	width:100%;
-	height:56%;
+	height:55%;
 	margin: 0px;
 	overflow-x:hidden;
 	overflow-y:scroll;
@@ -137,9 +138,8 @@ html, body {
 	margin: 0px;
 	font-size: 25px;
 	line-height: 25px;
-	margin-bottom:0px;
+	margin-bottom:2px;
 	color:#39230E;
-	font-weight: normal;
 }
 
 .restaurant{
@@ -178,7 +178,7 @@ html, body {
 
 #footer{
 	width:100%;
-	height:4%;
+	height:5%;
 	margin: 0px;
 	overflow:hidden;
 	background-color: #D12828;
@@ -195,7 +195,7 @@ html, body {
 #footer #gzlink{
 	float:left;
 	text-align: right;
-	font-family: 'Vollkorn', serif;
+	font-family: 'Ultra', serif;
 	font-size:18px;
 	color: #FEF500;
 	display: block;
@@ -260,8 +260,10 @@ html, body {
 @media screen and (max-width: 480px) {
  /* Add your styles for devices with a maximum width of 480 */
 
-	#title{
-		font-size: 28px;
+	#header {
+		width: 96%;
+		padding-right: 2%;
+		padding-left: 2%;
 	}
 
 	#overmap{
